src/objects/ProductOutStock__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>ProductOutStock</relationshipLabel>
        <relationshipName>ProductOutStock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountMasterUnit__c</fullName>
        <label>単位</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <formula>NULLVALUE (Tankanonetax__c, 0) *  ProductNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売高（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNotTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>在庫集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutStockDate__c</fullName>
        <description>売上日・受注日の日付、YYYYMMDD</description>
        <externalId>true</externalId>
        <label>出庫日</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>商品数量</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductStock__c</fullName>
        <label>商品在庫情報</label>
        <referenceTo>ProductStock__c</referenceTo>
        <relationshipLabel>ProductOutStock</relationshipLabel>
        <relationshipName>ProductOutStock</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StockOutDateCal__c</fullName>
        <formula>DATE(VALUE(MID(OutStockDate__c , 1, 4) ),VALUE(MID(OutStockDate__c , 5, 2) ),VALUE(MID(OutStockDate__c , 7, 2) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$出庫日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <label>販売単価（税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>商品出庫情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountMasterRef__c</columns>
        <columns>ProductStock__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OutStockDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>POS-{000000000}</displayFormat>
        <label>商品出庫情報</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>